--- a/views/rating.erb
+++ b/views/rating.erb
@@ -8,7 +8,7 @@
 	<% if (movies) %>
 	<ul> 
 		<% movies.each do |movie| %> 
-			<li><a href="movies/<%= movie[0]%>"><%= movie[1] %></a></li>
+			<li><a href="/movies/<%= movie[0]%>"><%= movie[1] %></a></li>
 		<% end %> 
 	</ul>
 	<% end %> 
