--- a/views/movie.erb
+++ b/views/movie.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href = "../public/styles.css" rel = "stylesheet" type ="text/css"/>
+	<link href = "../styles.css" rel = "stylesheet" type ="text/css"/>
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<title></title>
 </head>
