--- a/views/rating.erb
+++ b/views/rating.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href = "../styles.css" rel = "stylesheet" type ="text/css"/>
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<title></title>
 </head>
 <body>
