--- a/views/show.erb
+++ b/views/show.erb
@@ -9,7 +9,7 @@
 
 	<h1><%= movie[1] %> has an rating of <%= movie[2] %></h1>
 
-	<img src = "<%= movie[3] %>">
+	<img src = "<%= movie[3] %>"><br>
 	<a href = "/">go home</a><br>
 	<a href = "/movies/rating/<%= movie[2] %>">see other <%= movie[2] %> movies </a>
 
